whitespace issues in code

--- a/static/css/cards_large_screen.css
+++ b/static/css/cards_large_screen.css
@@ -1,2 +1,244 @@
-/*use command shift r to clear browser cache*/
 html { overflow-y: scroll; overflow-x:hidden; }  /*prevent horizontal scrolling*/
+
+body {
+	margin: 0;
+	padding: 0;
+
+}
+
+header {
+	background-color: #FFEBE6;
+	height: 80px;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+button {
+	border: none;
+	background-color: transparent;
+}
+
+button:hover {
+	cursor: pointer;
+}
+
+
+#left_arrow {
+	opacity: 1;
+}
+
+#body_wrapper {
+	width: 100%;
+	height: 1000px;
+	display: flex;
+	justify-content: center;
+}
+
+
+#page_description {
+  font-family: "Verdana";
+  font-style: italic;
+  font-size: 50px;
+  font-weight: bold;
+  max-width: 40ch;
+  text-align: center;
+  transform: scale(0.94);
+  animation: scale 1s forwards cubic-bezier(0.5, 1, 0.89, 1);
+  color: lightgray;
+  z-index: 1;
+  position: relative;
+	top: 30px;
+}
+
+@keyframes scale {
+  100% {
+    transform: scale(1);
+  }
+}
+
+span {
+  display: inline-block;
+  opacity: 0;
+  filter: blur(4px);
+}
+
+span:nth-child(1) {
+  animation: fade-in 0.8s 0.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(2) {
+  animation: fade-in 0.8s 0.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(3) {
+  animation: fade-in 0.8s 0.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(4) {
+  animation: fade-in 0.8s 0.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(5) {
+  animation: fade-in 0.8s 0.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(6) {
+  animation: fade-in 0.8s 0.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(7) {
+  animation: fade-in 0.8s 0.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(8) {
+  animation: fade-in 0.8s 0.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(9) {
+  animation: fade-in 0.8s 0.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(10) {
+  animation: fade-in 0.8s 1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(11) {
+  animation: fade-in 0.8s 1.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(12) {
+  animation: fade-in 0.8s 1.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(13) {
+  animation: fade-in 0.8s 1.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(14) {
+  animation: fade-in 0.8s 1.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(15) {
+  animation: fade-in 0.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(16) {
+  animation: fade-in 0.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(17) {
+  animation: fade-in 0.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(18) {
+  animation: fade-in 0.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+@keyframes fade-in {
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+
+#search {
+	position: relative;
+	background-color: white;
+	border-radius: 5px;
+	height: 50%;
+	width: 40%;
+	min-width: 900px;
+	box-shadow: none;
+	display: flex;
+	align-items: center;
+	border-style: solid;
+	border-color: lightgray;
+	border-width: .5px;
+}
+
+#search input {
+	border: 0;
+	outline: 0;
+	position: relative;
+	padding-left: 1.5%;
+	padding-top: 2px;
+	background-color: white;
+	font-size: 14px;
+	width:100%;
+  	box-sizing:border-box;
+  	-moz-box-sizing:border-box;
+
+}::placeholder {
+  color: dimgray;
+  opacity: .5;
+  font-size: 14px;
+}
+
+#search_wrapper {
+	width: 100%;
+	cursor: text;
+	display: flex;
+}
+
+
+#search_icon {
+	height: 14px;
+	width: auto;
+	margin-left: 10px;
+	padding-top: 2px;
+}
+
+#x_icon {
+	height: 16px;
+	width: auto;
+	position: absolute;
+	right: 2%;
+  	padding-right: 1px;
+	opacity: 0;
+	cursor: text;
+	
+}
+
+#logo {
+	height: 60px;
+	width: auto;
+	margin-top: 2%;
+
+}
+
+#logo_text {
+	color: black;
+	font-family: "copperplate", Geneva, Impact, sans-serif;
+	font-size: 24px;
+	font-weight: bold;
+	left: 5%;
+	margin-top: 10%;
+
+}
+
+#logo_wrapper {
+	min-width: 190px;
+	height: auto;
+	display: flex;
+	justify-content: space-between;
+	position: absolute;
+	left: 2%;
+	cursor: pointer;
+}
+
+#links_wrapper {
+	min-width: 175px;
+	display: flex;
+	justify-content: space-between;
+	position: absolute;
+	right: 2%;
+}
+
+.links {
+	color: black;
+	font-family: "copperplate", Geneva, Impact, sans-serif;
+	font-size: 20px;
+}
+
